--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3">
-          <p class="copyright">&copy; NMTSS - All Rights Reserved</p>
+          <p class="copyright">&copy; NMTSS - All Rights Reserved.</p>
           <div class="credits">
 
             Designed by <a href="https://nmtss.net/">NMTSS</a>
