--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/venobox/venobox.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
   <!-- Nivo Slider Theme -->
   <link href="css/nivo-slider-theme.css" rel="stylesheet">
 
@@ -372,7 +374,7 @@ p, .p {
          <div class="row pt-5 mb-50 mt-30">
         <div class="col-lg-4 col-sm-6 mb-30 pb-5" style="margin-bottom: 50px;">
             <a class="card" href="#">
-                <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-user fa-3x head-icon"></i></div>
+                <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-globe fa-3x head-icon"></i></div>
                 <div class="card-body text-center">
                     <h3 class="card-title pt-1">Servicos de Consultoria virada para Internet</h3>
                     <div class="card-text text-sm"> 
@@ -392,7 +394,7 @@ p, .p {
         </div>
         <div class="col-lg-4 col-sm-6 mb-30 pb-5" style="margin-bottom: 50px;">
             <a class="card" href="#">
-                <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-user-circle-o fa-3x head-icon"></i></div>
+                <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fab fa-teamspeak fa-3x head-icon"></i></div>
                 <div class="card-body text-center">
                     <h3 class="card-title pt-1">Assistência e suporte informático</h3>
                     <div class="card-text text-sm">
@@ -419,7 +421,7 @@ p, .p {
 
         <div class="col-lg-4 col-sm-6 mb-30 pb-5" style="margin-bottom: 70px;">
             <a class="card" href="#">
-                <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-address-book fa-3x head-icon"></i></div>
+                <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-chart-line fa-3x head-icon"></i></div>
                 <div class="card-body text-center">
                     <h3 class="card-title pt-1">Consultoria de gestão</h3>
                     <div class="card-text text-sm">
@@ -446,7 +448,7 @@ p, .p {
 
         <div class="col-lg-4 col-sm-6 mb-30 pb-5" style="margin-bottom: 50px;">
             <a class="card" href="#">
-                <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-car fa-3x head-icon"></i></div>
+                <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-camera-retro fa-3x head-icon"></i></div>
                 <div class="card-body text-center">
                     <h3 class="card-title pt-1">Marketing Digital e Publicidade</h3>
                     <div class="card-text text-sm"> 
@@ -476,7 +478,7 @@ p, .p {
 
         <div class="col-lg-4 col-sm-6 mb-30 pb-5" style="margin-bottom: 50px;">
             <a class="card" href="#">
-                <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-camera fa-3x head-icon"></i></div>
+                <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-book fa-3x head-icon"></i></div>
                 <div class="card-body text-center">
                     <h3 class="card-title pt-1">Formações Profissionais</h3>
                     <div class="card-text text-sm">
@@ -504,7 +506,7 @@ p, .p {
 
         <div class="col-lg-4 col-sm-6 mb-30 pb-5"  style="margin-bottom: 50px;">
             <a class="card" href="#">
-                <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-image fa-3x head-icon"></i></div>
+                <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-chart-pie fa-3x head-icon"></i></div>
                 <div class="card-body text-center">
                     <h3 class="card-title pt-1">Consultoria e auditoria em SI/TI</h3>
                     <div class="card-text text-sm">
@@ -601,17 +603,17 @@ p, .p {
                   <ul>
                     <li>
                       <a href="#">
-													<i class="fa fa-facebook"></i>
+													<i class="fab fa-facebook"></i>
 												</a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-twitter"></i>
+													<i class="fab fa-twitter"></i>
 												</a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-instagram"></i>
+													<i class="fab fa-instagram"></i>
 												</a>
                     </li>
                   </ul>
@@ -634,17 +636,17 @@ p, .p {
                   <ul>
                     <li>
                       <a href="#">
-													<i class="fa fa-facebook"></i>
+													<i class="fab fa-facebook"></i>
 												</a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-twitter"></i>
+													<i class="fab fa-twitter"></i>
 												</a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-instagram"></i>
+													<i class="fab fa-instagram"></i>
 												</a>
                     </li>
                   </ul>
@@ -667,17 +669,17 @@ p, .p {
                   <ul>
                     <li>
                       <a href="#">
-													<i class="fa fa-facebook"></i>
+													<i class="fab fa-facebook"></i>
 												</a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-twitter"></i>
+													<i class="fab fa-twitter"></i>
 												</a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-instagram"></i>
+													<i class="fab fa-instagram"></i>
 												</a>
                     </li>
                   </ul>
@@ -903,7 +905,7 @@ p, .p {
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="contact-icon text-center">
               <div class="single-icon">
-                <i class="fa fa-envelope-o"></i>
+                <i class="fas fa-envelope"></i>
                 <p>
                   Email: info@nmtss.net<br>
                   <span>Web:<a href="http://nmtss.net">http://nmtss.net</a></span>
@@ -983,16 +985,16 @@ p, .p {
                 <div class="footer-icons">
                   <ul>
                     <li>
-                      <a href="#"><i class="fa fa-facebook"></i></a>
+                      <a href="#"><i class="fab fa-facebook-f"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-twitter"></i></a>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-google"></i></a>
+                      <a href="#"><i class="fab fa-google"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-pinterest"></i></a>
+                      <a href="#"><i class="fab fa-pinterest"></i></a>
                     </li>
                   </ul>
                 </div>
