--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
+  <meta name="google-site-verification" content="_DDot6vEbKgFc2ONM0YSZPw437vUKiOHtd0_mRT9Oc8" />
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
