--- a/index.html
+++ b/index.html
@@ -8,9 +8,35 @@
   <meta content="" name="description">
   <meta name="google-site-verification" content="GVOWnA2GZMaHqxQAuQkC_wd63804y2lfCZPHbMRkwgA" />
 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Plataforma de integracao de aplicativo para aplicativo e interactividade entre aplicativos e utentes por SMS, Webhooks e redes sociais!">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:title" content="MENSAGEIRO - Automatize a sua interação com os clientes" />
+  <meta property="og:url" content="http://www.nmtss.net" />
+  <meta property="og:description" content="MENSAGEIRO é uma ferramenta online que facilita a comunicação entre  Instituições  e seus utentes através do envio de mensagens em massa.">
+        <meta property="og:image" content="http://www.mensageiro.info/assets/_img/MG.png">
+  <meta property="og:type" content="website" />
+<meta property="og:locale" content="pt_PT" />
+
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  
+  <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="img/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+<link rel="manifest" href="img/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
