--- a/pricing.html
+++ b/pricing.html
@@ -191,6 +191,66 @@ p, .p {
   <div id="preloader"></div>
 
 
+  <header>
+    <!-- header-area start -->
+    <div id="sticker" class="header-area">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12">
+
+            <!-- Navigation -->
+            <nav class="navbar navbar-default">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                <!-- Brand -->
+                <a class="navbar-brand page-scroll sticky-logo" href="index.html">
+                  <h1><span>NM</span>TSS</h1>
+                  <!-- Uncomment below if you prefer to use an image logo -->
+                  <!-- <img src="img/logo.png" alt="" title=""> -->
+                </a>
+              </div>
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1" id="navbar-example">
+                <ul class="nav navbar-nav navbar-right">
+                  <li class="active">
+                    <a class="page-scroll" href="#home">Página inicial</a>
+                  </li>
+                  <li class="active">
+                    <a href="/pricing.html">Pricing</a>
+                  </li>
+                  <li>
+                    <a class="page-scroll" href="#about">Sobre</a>
+                  </li>
+                  <li>
+                    <a class="page-scroll" href="#services">Serviços</a>
+                  </li>
+                  <li>
+                    <a class="page-scroll" href="#team">Equipa</a>
+                  </li>
+                  <li>
+                    <a class="page-scroll" href="#portfolio">Portfolio</a>
+                  </li>
+
+                  <li>
+                    <a class="page-scroll" href="#contact">Contactos</a>
+                  </li>
+                </ul>
+              </div>
+              <!-- navbar-collapse -->
+            </nav>
+            <!-- END: Navigation -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- header-area end -->
+  </header>
   <!-- header end -->
 
   <!-- Start Bottom Header -->
