--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ p, .p {
                 <h4 class="sec-head">A nossa missão</h4>
               </a>
               <p>
-                Prover serviços de altos padrões de qualidade, rigor, profissionalismo, integridade e dinamismo visando satisfazer as necessidades dos nossos clientes, para maior lucratividade e crescimento da empresa e a criação de novos empregos.
+                Pautar sempre pela inovação, e prover serviços com padrões altos em qualidade, rigor, profissionalismo, integridade e dinamismo para satisfação das necessidades dos nossos clientes. 
               </p>
 
 
@@ -376,7 +376,15 @@ p, .p {
              <h4 class="sec-head">A nossa História</h4>
               </a>
               <p>
-                A <b><em>NMTSS </em></b> começou em 2012, quando o proprietario de uma pequena empresa procurava por serviços de Desenvolvimento Web, e se reuniu com o Dr.Abdul(atualmente o nosso CTO). Desta reuniao nasceu o primeiro website da <em>TATOS BOTAO</em>, como um trabalho de freelancing, mas em pouco tempo, a Tatos Botao começou a crescer e com isso as suas necessidades foram se tornando complexas e necessitando de mais estrutura. Poucas semanas depois, foi esboçado um Business Model,e a NMTSS começou a prover serviços na area de TI na cidade da Beirano principio de 2012, e rapidamente expandindo para oferecer os serviços digitais alem fronteira.
+                <p>A NM Technology Services &amp; Solutions e uma empresa jovem que prov&ecirc; servi&ccedil;os de Tecnologias da Informa&ccedil;&atilde;o e Comunica&ccedil;&atilde;o (TIC). Foi criada em 2012 por <strong>Abdul Gafar Meque</strong>, CTO da empresa e no come&ccedil;o estava apenas virada para o desenvolvimento de p&aacute;ginas web, tendo como o primeiro cliente a empresa Tatos Bot&atilde;o.</p>
+<p>Posteriormente, merc&ecirc; de novos desafios na &aacute;rea das TICs, a NMTSS passou a oferecer diversos servi&ccedil;os al&eacute;m da cria&ccedil;&atilde;o de p&aacute;ginas web, nomeadamente:&nbsp;</p>
+<ol>
+<li>Consultoria virada para internet;</li>
+<li>Assist&ecirc;ncia e suporte inform&aacute;tico;</li>
+<li>Marketing Digital;</li>
+<li>Consultoria e Auditoria de Sistemas de Informa&ccedil;&atilde;o ou Tecnologias de Informa&ccedil;&atilde;o e Comunica&ccedil;&atilde;o;</li>
+<li>Repara&ccedil;&atilde;o e Manuten&ccedil;&atilde;o de Equipamentos Inform&aacute;ticos.</li>
+</ol>
               </p>
 
 
